Create out of memory error
