# ui/static/swagger.yaml
@@ -51,6 +51,15 @@ paths:
                 properties:
                   error:
                     type: string
+        "500":
+          description: Insufficient storage
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
 
   /keyword_search:
     post:
@@ -86,6 +95,15 @@ paths:
                   $ref: "#/components/schemas/Garment"
         "400":
           description: Invalid request body
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        "500":
+          description: Insufficient storage
           content:
             application/json:
               schema:
@@ -215,7 +233,7 @@ paths:
                 imageUrl: "https://image.hm.com/assets/hm/ea/d7/ead79a8422df6e29abb8e0057c7dbf2d6658bf4c.jpg"
                 description: "A pair of black pants"
       responses:
-        "200":
+        "201":
           description: Garment edited successfully
           content:
             application/json:
